analogue Change Log

Version 0.6-24

	* plot.roc: was resetting the plotting region at the end of
	plotting even when there was no need to do so.

	* residuals: Residuals were defined as \hat{x}_i - x_i to match
	fitted vs. observed scatterplots. Definition of residuals in wa()
	and related functions has been changed to the more common
	definition of x_i - \hat{x}. Reported by Andreas Plank and Steve
	Juggins.

	* plot.wa: Following changed definition of residuals, plot.wa()
	now plots observed values on the y-axis and fitted values on the
	x-axis for 'which = 1'.

	* summary.predict.mat: print method was incorrectly extracting
	the model estimates for training set samples.

	* predict.wa: fix minor bug with CV when tolerance DW was used.

	* Package: reduced package check time in examples, by using
	the Imbrie & Kipp data.

Version 0.6-23

	* tran: 'rootroot' transformation was same as 'cuberoot' from
	vhanges made in r140. Now fixed.

	* wa: 'formula' method was not passing tolerance-related arguments
	to default method. As such, the newer code to handle small
	tolerance values was not being invoked when using the formula
	interface to wa().

	Code was also tidied a bit.

	* fixUpTol: was inappropriately matching one of it's arguments.

	* roc: In some circumstances, the generation of the points at which
	the ROC curve was evaluated resulted in more points than the other
	statistics. Fixed to use the points established by 'table', used to
	generate these other statistics. This affected the plot method.

	* plot.roc: Allow user to specify the line types used to draw the
	plots. Two line types can be specified for plots comparing analogue
	with non-analogue statistics.

	New argument 'abline.lty', which defaults to "dashed", controls
	plotting of the optimal ROC dissimilarity threshold.

	* plot.minDC: argument 'lty.quantile' was not being used by the
	graphical function that drew the quantiles of the pairwise D[ij]s.
